<resources>
    <string name="app_name">Woowahan</string>
    <string name="cur_review_kor">최근 리뷰</string>
    <string name="least_price_kor">최소 주문 금액</string>
    <string name="ride_tip_kor"> 배달 팁</string>
    <string name="arrival_time_kor">도착 예정 시간</string>
    <string name="warning_sign_kor">메뉴 사진은 연출된 이미지로 실제 조리된 음식과 다를 수 있습니다.</string>
    <string name="price_kor">가격</string>
    <string name="small_kor">소</string>
    <string name="middle_kor">중</string>
    <string name="big_kor">대</string>
    <string name="add_kor">담기</string>
</resources>