<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/sub_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@id/specific_item_info"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/specific_item_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/blackline1"
        app:layout_constraintTop_toBottomOf="@id/sub_image_view">

        <TextView
            android:id="@+id/menu_specific_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/menu_specific_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blackline1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/item_specific"
        app:layout_constraintTop_toBottomOf="@id/specific_item_info" />

    <LinearLayout
        android:id="@+id/item_specific"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/menu_specific_least_price"
        app:layout_constraintTop_toBottomOf="@id/blackline1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/price_kor"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/specific_small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/small_kor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/specific_small"
                                android:layout_alignBottom="@id/specific_small"
                                android:layout_alignParentEnd="true"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="20,000원" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/specific_middle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/middle_kor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/specific_middle"
                                android:layout_alignBottom="@id/specific_middle"
                                android:layout_alignParentEnd="true"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="20,000원" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/specific_big"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/big_kor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/specific_big"
                                android:layout_alignBottom="@id/specific_big"
                                android:layout_alignParentEnd="true"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="20,000원" />

                        </RelativeLayout>

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="추가 선택 (최대 3개 까지)"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="막국수" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="막국수" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="막국수" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="막국수" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="막국수" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="수량" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#888888"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/warning_sign_kor" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/menu_specific_least_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/least_price_kor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@id/item_specific" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_kor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_specific_least_price" />

</androidx.constraintlayout.widget.ConstraintLayout>