<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/main_card_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@color/cardview_dark_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="hello world"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/shop_rating"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/shop_review_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/shop_phone"
            android:autoLink="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/least_price_kor"
                android:padding="5dp"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/minimum_price"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ride_tip_kor"
                android:padding="5dp"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tip_price"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time_kor"
                android:padding="5dp"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" />

</LinearLayout>